--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node bin/www",
-    "dev": "nodemon bin/www"
+    "dev": "nodemon bin/www",
+    "test": "jest --detectOpenHandles --testTimeout=50000",
+    "coverage": "npm test -- --coverage"
   },
   "author": "Hamza Alalach",
   "license": "MIT",
@@ -18,6 +20,8 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "jest": "^26.5.2",
+    "nodemon": "^2.0.4",
+    "supertest": "^5.0.0"
   }
 }
